Add play, pause to kmeans demo

--- a/src/kmeans/kmeans-demo.html
+++ b/src/kmeans/kmeans-demo.html
@@ -3,9 +3,16 @@
     <head>
        	<script type="text/javascript" src="../src/kmeans/kmeans.js"></script>
        	<script type="text/javascript" src="../src/kmeans/kmeans-demo.js"></script>
+        <style>
+           #kmeansCanvas {
+             float:left;
+           }
+        </style>
     </head>
     <body>
         <canvas id="kmeansCanvas" width="500" height="470">
         </canvas>
+        <button id="start">Play</button>
+        <button id="clear">Clear</button>
     </body>
 </html>
