--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
+    <title>ai-js,</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -38,12 +38,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Project name</a>
+          <a class="brand" href="#">ai-js</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#about">Algorithms</a></li>
+              <li><a href="#contact">Visualizations</a></li>
+              <li><a href="#contact">Downloads</a></li>
+              <li><a href="#contact">About</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -52,8 +54,8 @@
 
     <div class="container">
 
-      <h1>Bootstrap starter template</h1>
-      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
+      <h1>Welcome to the home of ai-js!</h1>
+      <p>Play with k-means …<br> … or explore more algorithms.</p>
 
     </div> <!-- /container -->
 
