Add some info in index.html

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">Algorithms</a></li>
-              <li><a href="#contact">Visualizations</a></li>
-              <li><a href="#contact">Downloads</a></li>
-              <li><a href="#contact">About</a></li>
+              <li><a href="#algorithms">Algorithms</a></li>
+              <li><a href="#visualizations">Visualizations</a></li>
+              <li><a href="#downloads">Downloads</a></li>
+              <li><a href="#about">About</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
