--- a/src/visualizations/paper_demo.html
+++ b/src/visualizations/paper_demo.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="lib/paper.js"></script>
 <!-- Define inlined PaperScript associate it with myCanvas -->
 <script type="text/javascript" src="js/kmeans-data.js" ></script>
+<script type="text/javascript" src="../kmeans/kmeans-instrumented.js" ></script>
 <script type="text/paperscript" src="js/kmeans-vis.js" canvas="myCanvas"></script>
 </head>
 <body>
