Change animation logic

--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">ai-js</a>
+          <a class="brand" href="#">le-ai-js</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#algorithms">Algorithms</a></li>
+              <!--
+<li><a href="#algorithms">Algorithms</a></li>
               <li><a href="#visualizations">Visualizations</a></li>
               <li><a href="#downloads">Downloads</a></li>
               <li><a href="#about">About</a></li>
+-->
             </ul>
           </div><!--/.nav-collapse -->
         </div>
